--- a/src/template.html
+++ b/src/template.html
@@ -7,5 +7,11 @@
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
   </head>
   <body>
+
+        <div id="root">
+        </div>
+        <div id="app"></div>
+
+
   </body>
 </html>
